[tool.poetry]
name = "Message_board"
version = "0.1.0"
description = ""
authors = ["Muhammad Karim Fadillah <karim.fadillah@prosa.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
SQLAlchemy = "^1.4.32"
uvicorn = "^0.17.6"
python-multipart = "^0.0.5"
python-dotenv = "^0.19.2"
python-jose = "^3.3.0"
psycopg2-binary = "^2.9.3"
passlib = "^1.7.4"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
